--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -50,6 +50,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
 
